# acc-ml-living-review

./: .gitignore  LICENSE  README.md  SCOPE.md  TODO.md  index.html  index.xml  netlify.toml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: deploy.yml  hugo.yml  pipeline.yml  rebuild.yml  sphinx.yml
about/: index.html
admin/: config.yml
categories/: index.xml
cite/: index.html
cite-us/: index.html
contribute/: index.html
data/: db.json  migration_dropped.md  pending_review.json
data/eval/: negatives.json  positives.json
docs/: .buildinfo.bak  genindex.html  index.html  index.xml  living_review.html  methodology.html  modules.html  objects.inv  py-modindex.html  requirements.txt  search.html  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree  living_review.doctree  modules.doctree
docs/_sources/: living_review.rst.txt  modules.rst.txt
docs/source/: conf.py  index.rst  (+1 more)
documentation/: index.html
downloads/: livingreview.bib  ml-accel-review.ris
living_review/: __init__.py  adjudicator.py  classifier.py  cli.py  config.py  data_model.py  db.py  dedup.py  enrich.py  exporters.py  fetchers copy 2.py  fetchers.py  gates.py  history.py  logs.py  migrate.py  pipeline.py  relevance.py  stats.py  utils.py
living_review.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ml-accel-review/: config.toml
papers/: index.html  index.xml
review/: index.html
scripts/: calibrate_thresholds.py  sanity_check.py
site/: CURATOR_WORKFLOW.md  README.md  config.toml  hugo.toml  hugo_stats.json
submit/: index.html
tags/: index.xml
templates/: review_template copy 2.html  review_template copy.html  review_template.html
tests/: conftest.py  test_adjudicator.py  test_db_merge.py  test_dedup.py  test_enrich.py  test_gates.py  test_migrate.py  test_pipeline_integration.py  test_utils_ids.py
venues/: index.xml
years/: index.xml
(+68 files in other folders)
