[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "living-review"
version = "0.1.0"
description = "Living Review of AI/ML Applications in Particle Accelerators"
authors = [
    { name="Your Name", email="your.email@example.com" }
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"

dependencies = [
    "arxiv>=1.4.7",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    "sentence-transformers>=2.6.1",
    "torch>=2.0.0",
    "jinja2>=3.1.3",
    "pandas>=2.2.0",
    "python-dateutil>=2.8.2"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "isort"
]

[project.scripts]
living-review = "living_review.cli:main"

[tool.setuptools]
packages = ["living_review"]   # ✅ only include your code package
