[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "living-review"
version = "0.1.0"
description = "Living Review of AI/ML Applications in Particle Accelerators"
authors = [
    { name="Adnan Ghribi", email="aghribi@gmail.com" }
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"

dependencies = [
    "arxiv>=1.4.7",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    "sentence-transformers>=2.6.1",
    "transformers>=4.40.0",
    "torch>=2.0.0",
    "jinja2>=3.1.3",
    "pandas>=2.2.0",
    "python-dateutil>=2.8.2",
    "reportlab>=4.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "responses",
    "black",
    "flake8",
    "isort"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: tests that download models or run the eval benchmark",
]

[project.scripts]
living-review = "living_review.cli:main"

[tool.setuptools]
packages = ["living_review"]   # ✅ only include your code package
